regex > regexp, keeping package name the same bc golang regexp

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,8 @@ jobs:
           go install gotest.tools/gotestsum@latest
 
       - name: Test
+        env:
+          BETTERLEAKS_REGEX_ENGINE: ${{ matrix.platform == 'windows-latest' && 'stdlib' || '' }}
         run: |
           gotestsum --raw-command -- go test -json ./... --race
 
